...
import cz.mendelu.pef.flashyflashcards.ui.theme.basicMargin
import cz.mendelu.pef.flashyflashcards.ui.theme.halfMargin
import cz.mendelu.pef.flashyflashcards.ui.theme.mediumMargin
import cz.mendelu.pef.flashyflashcards.ui.theme.smallMargin
import cz.mendelu.pef.flashyflashcards.utils.DateUtils

const val TestTagFlashcard = "TestTagFlashcard"
const val TestTagAnswerTextField = "TestTagAnswerTextField"
const val TestTagNextFlashcardButton = "TestTagNextFlashcardButton"
const val TestTagResultTitle = "TestTagResultTitle"
const val TestTagTestSummary = "TestTagTestSummary"
const val TestTagSaveTestHistoryButton = "TestTagSaveTestHistoryButton"

@CollectionsNavGraph
@Destination
@Composable
fun FlashcardPracticeScreen(
    navController: NavController,
...
