...
import cz.mendelu.pef.flashyflashcards.ui.screens.destinations.AddEditWordScreenDestination
import cz.mendelu.pef.flashyflashcards.ui.screens.destinations.FlashcardPracticeScreenDestination
import cz.mendelu.pef.flashyflashcards.ui.screens.destinations.TestHistoryScreenDestination
import cz.mendelu.pef.flashyflashcards.ui.theme.basicMargin

const val TestTagCollectionEditButton = "TestTagCollectionEditButton"
const val TestTagAddWordButton = "TestTagAddWordButton"
const val TestTagTrainingMode = "TestTagTrainingMode"
const val TestTagTestMode = "TestTagTestMode"
const val TestTagCollectionsMoreActions = "TestTagCollectionsMoreActions"
const val TestTagTestHistory = "TestTagTestHistory"

@CollectionsNavGraph
@Destination
@Composable
fun WordsScreen(
    navController: NavController,
...
